--- a/index.html
+++ b/index.html
@@ -1,36 +1,44 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Loqt : Logic Objects and Qt" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Loqt by CapelliC</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="javascripts/main.js"></script>
+    <!--[if lt IE 9]>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Loqt</title>
   </head>
-
   <body>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/CapelliC/loqt">View on GitHub</a>
+      <header>
+        <h1>Loqt</h1>
+        <p>Logic Objects and Qt</p>
+      </header>
 
-          <h1 id="project_title">Loqt</h1>
-          <h2 id="project_tagline">Logic Objects and Qt</h2>
+      <div id="banner">
+        <span id="logo"></span>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/CapelliC/loqt/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/CapelliC/loqt/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
+        <a href="https://github.com/CapelliC/loqt" class="button fork"><strong>View On GitHub</strong></a>
+        <div class="downloads">
+          <span>Downloads:</span>
+          <ul>
+            <li><a href="https://github.com/CapelliC/loqt/zipball/master" class="button">ZIP</a></li>
+            <li><a href="https://github.com/CapelliC/loqt/tarball/master" class="button">TAR</a></li>
+          </ul>
+        </div>
+      </div><!-- end banner -->
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+    <div class="wrapper">
+      <nav>
+        <ul></ul>
+      </nav>
+      <section>
         <h1>
 <a name="loqt" class="anchor" href="#loqt"><span class="octicon octicon-link"></span></a>loqt</h1>
 
@@ -51,24 +59,19 @@
 <li><p>lqXDot is the actual Graphviz processor.</p></li>
 <li>lqXDot/lqXDotScene the main component.</li>
 <li>lqXDot/lqContextGraph shows a way to encapsulate the Graphviz pointer model in C++.</li>
-</ul><p><em>lqXDot</em>test_ is a utility UI,
+</ul><p>lqXDot_test is an utility UI,
 with basic file/mode maintenance,
 display both lqXDot/<em>SVG</em> rendering,
 and allow editing with syntax coloring.</p>
 
 <p>lqUty collects some basic Qt interface helpers.</p>
       </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Loqt maintained by <a href="https://github.com/CapelliC">CapelliC</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      <footer>
+        <p>Project maintained by <a href="https://github.com/CapelliC">CapelliC</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></small></p>
       </footer>
     </div>
-
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
-
   </body>
 </html>
