--- a/lqUty/SourceEdit.html
+++ b/lqUty/SourceEdit.html
@@ -23,7 +23,7 @@
 <html>
  <head>
   <meta charset="utf-8">
-  <title>SWI-Prolog Qt IDE, editing with CodeMirror</title>
+  <title>editing Prolog with CodeMirror</title>
   <script src="codemirror/lib/codemirror.js"></script>
   <link rel="stylesheet" href="codemirror/lib/codemirror.css">
   <!-- search/replace -->
@@ -46,7 +46,8 @@
   </style>
  </head>
  <body>
-  <script>var editor = CodeMirror(document.body,{
+  <script>
+  var editor = CodeMirror(document.body,{
    mode:"prolog",
    //theme:"twilight",
    //theme:"ambiance",
