CodeMirror rationalized interface

--- a/lqUty/CodeMirror.html
+++ b/lqUty/CodeMirror.html
@@ -54,7 +54,7 @@
    //theme:"3024-day",
    //theme:"3024-night",
    //theme:"ambiance",
-   //theme:"elegant",
+   theme:"elegant",
    //theme:"twilight",
    lineNumbers:true,
    matchBrackets:true,
