--- a/index.html
+++ b/index.html
@@ -41,29 +41,40 @@
         <h1>
 <a name="loqt" class="anchor" href="#loqt"><span class="octicon octicon-link"></span></a>loqt</h1>
 
-<h1></h1>
-
 <p>Logic Objecs and Qt</p>
 
-<p>By now, just a rendering of <a href="http://www.graphviz.org/">Graphviz</a> (via library cgraph) to Qt Graphic Scene.</p>
+<ul>
+<li><p>lqXDot: just a rendering of Graphviz (via library cgraph,xdot) to Qt Graphic Scene.
+Such rendering plays a role in my next project (to be published), showcasing (SWI)Prolog direct control of Qt via reflection.</p></li>
+<li><p>spqr: a basic SWI-Prolog Graphviz interface (WIP).
+Graphviz rendering by Prolog.</p></li>
+</ul><h1></h1>
 
-<p>Such rendering plays a role in my next project (to be published), showcasing (SWI)Prolog direct control of Qt via reflection.</p>
-
-<p>Some note about components</p>
+<p>lqXDot components:</p>
 
 <ul>
-<li>lqUty</li>
-<li>lqXDot</li>
-<li><p>lqXDot_test</p></li>
-<li><p>lqXDot is the actual Graphviz processor.</p></li>
-<li>lqXDot/lqXDotScene the main component.</li>
-<li>lqXDot/lqContextGraph shows a way to encapsulate the Graphviz pointer model in C++.</li>
-</ul><p>lqXDot_test is an utility UI,
-with basic file/mode maintenance,
-display both lqXDot/<em>SVG</em> rendering,
-and allow editing with syntax coloring.</p>
+<li>
+<p>lqXDot is the actual Graphviz processor.</p>
 
-<p>lqUty collects some basic Qt interface helpers.</p>
+<ul>
+<li>lqXDotScene the main component.</li>
+<li>lqContextGraph shows a way to encapsulate the Graphviz pointer model in C++.</li>
+</ul>
+</li>
+<li><p>lqXDot_test is an utility UI,
+with basic file/mode maintenance,
+display both lqXDot/SVG rendering,
+and allow editing .dot,.gv with syntax coloring.</p></li>
+<li><p>lqUty collects some basic Qt interface helpers.</p></li>
+</ul><h1></h1>
+
+<p>spqr features:</p>
+
+<ul>
+<li>editing Prolog files via CodeMirror (requires QtWebKit)</li>
+<li>pqConsole control</li>
+<li>inline plDoc help (requires QtWebKit)</li>
+</ul>
       </section>
 
     </div>
